test/compile_errors/err_if_mixed_brace_then.w
//! expect-check-fail: cannot mix

fn main:
    let x = 5
    if x > 0 {
        print("positive")
    } else if x < 0 then print("negative")
    else print("zero")
